<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">OpenSCQ30</string>
    <string name="equalizer">Equalizer</string>
    <string name="ambient_sound_mode">Ambient Sound Mode</string>
    <string name="noise_canceling_mode">Noise Canceling Mode</string>
    <string name="normal">Normal</string>
    <string name="transparency">Transparency</string>
    <string name="noise_canceling">Noise Canceling</string>
    <string name="transport">Transport</string>
    <string name="indoor">Indoor</string>
    <string name="outdoor">Outdoor</string>
    <string name="hz">%1$d Hz</string>
    <string name="profile">Profile</string>
    <string name="refresh">Refresh</string>
    <string name="apply">Apply</string>
    <string name="loading">Loading</string>
    <string name="soundcore_signature">Soundcore Signature</string>
    <string name="acoustic">Acoustic</string>
    <string name="bass_booster">Bass Booster</string>
    <string name="bass_reducer">Bass Reducer</string>
    <string name="classical">Classical</string>
    <string name="podcast">Podcast</string>
    <string name="dance">Dance</string>
    <string name="deep">Deep</string>
    <string name="electronic">Electronic</string>
    <string name="flat">Flat</string>
    <string name="hip_hop">Hip Hop</string>
    <string name="jazz">Jazz</string>
    <string name="latin">Latin</string>
    <string name="lounge">Lounge</string>
    <string name="piano">Piano</string>
    <string name="pop">Pop</string>
    <string name="rnb">RnB</string>
    <string name="rock">Rock</string>
    <string name="small_speakers">Small Speakers</string>
    <string name="spoken_word">Spoken Word</string>
    <string name="treble_booster">Treble Booster</string>
    <string name="treble_reducer">Treble Reducer</string>
    <string name="custom">Custom</string>
    <string name="request_permission">Request Permission</string>
    <string name="bluetooth_permission_is_required">Bluetooth Permission is Required</string>
    <string name="custom_profile">Custom Profile</string>
    <string name="none">None</string>
    <string name="add">Add</string>
    <string name="create">Create</string>
    <string name="new_custom_profile">New Custom Profile</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="delete_custom_profile">Delete Custom Profile</string>
    <string name="delete_confirm">Are you sure you want to delete \"%s\"?</string>
    <string name="delete">Delete</string>
    <string name="back">Back</string>
    <string name="info">Info</string>
    <string name="source_code" tools:ignore="TypographyOther">
        &lt;p>The source code and bug reports are available at &lt;a href="https://github.com/Oppzippy/OpenSCQ30">https://github.com/Oppzippy/OpenSCQ30&lt;/a>.&lt;/p>
        &lt;br>

        &lt;p>Copyright (C) Kyle Scheuing&lt;/p>
        &lt;br>

        &lt;p>This program is free software: you can redistribute it and/or modify
        it under the terms of the GNU General Public License as published by
        the Free Software Foundation, either version 3 of the License, or
        (at your option) any later version.&lt;/p>
        &lt;br>

        &lt;p>This program is distributed in the hope that it will be useful,
        but WITHOUT ANY WARRANTY; without even the implied warranty of
        MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
        GNU General Public License for more details.&lt;/p>
        &lt;br>

        &lt;p>You should have received a copy of the GNU General Public License
        along with this program.  If not, see &amp;lt;&lt;a href="https://www.gnu.org/licenses/">https://www.gnu.org/licenses/&lt;/a>&gt;.&lt;/p>
    </string>
    <string name="khz">%s kHz</string>
    <string name="replace_existing_profile">Replace Existing Profile</string>
    <string name="replace">Replace</string>
    <string name="connected_to">Connected to %s</string>
    <string name="connecting_to">Connecting to %s</string>
    <string name="disconnected">Disconnected</string>
    <string name="disconnect">Disconnect</string>
    <string name="awaiting_connection">Awaiting Connection</string>
    <string name="an_error_has_occurred">An error has occurred</string>
    <string name="ambient_sound_mode_and_noise_canceling_mode_values">%1$s, %2$s</string>
    <string name="quick_presets">Quick Presets</string>
    <string name="quick_preset_number">Quick Preset %d</string>
    <string name="notification_permission_is_required">Notification Permission is Required</string>
    <string name="preset_profile">Preset Profile</string>
    <string name="vocal_mode">Vocal Mode</string>
    <string name="fully_transparent">Fully Transparent</string>
    <string name="custom_noise_canceling">Custom Noise Canceling</string>
    <string name="transparency_mode">Transparency Mode</string>
    <string name="firmware_version">Firmware Version</string>
    <string name="serial_number">Serial Number</string>
    <string name="age_range">Age Range</string>
    <string name="feature_flags">Feature Flags</string>
    <string name="device_info">Device Info</string>
    <string name="device_profile">Device Profile</string>
    <string name="ambient_sound_mode_cycle">Ambient Sound Mode Cycle</string>
    <string name="left_single_click">Left Single Click</string>
    <string name="left_double_click">Left Double Click</string>
    <string name="left_long_press">Left Long Press</string>
    <string name="previous_song">Previous Song</string>
    <string name="volume_up">Volume Up</string>
    <string name="volume_down">Volume Down</string>
    <string name="next_song">Next Song</string>
    <string name="voice_assistant">Voice Assistant</string>
    <string name="play_pause">Play Pause</string>
    <string name="right_single_click">Right Single Click</string>
    <string name="right_double_click">Right Double Click</string>
    <string name="right_long_press">Right Long Press</string>
    <string name="button_actions">Button Actions</string>
    <string name="disabled">Disabled</string>
    <string name="pair_device">Pair Device</string>
    <string name="auto_connect">Auto Connect</string>
    <string name="settings">Settings</string>
    <string name="unpair_device">Unpair Device</string>
    <string name="unpairing_from_device_name">Unpairing From %s</string>
    <string name="unpair">Unpair</string>
    <string name="import_export">Import/Export</string>
    <string name="export_custom_profiles">Export Custom Profiles</string>
    <string name="import_custom_profiles">Import Custom Profiles</string>
    <string name="copy_to_clipboard">Copy to Clipboard</string>
    <string name="openscq30_exported_profiles">Exported Profiles from OpenSCQ30</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="import_">Import</string>
    <string name="rename">Rename</string>
    <string name="new_name">New Name</string>
    <string name="import_json">Import JSON</string>
    <string name="copied">Copied</string>
    <string name="overwrite">Overwrite</string>
    <string name="import_complete">Import Complete</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="no_profiles_found">No Profiles Found</string>
    <string name="manual_noise_canceling">Manual Noise Canceling</string>
    <string name="adaptive_noise_canceling">Adaptive Noise Canceling</string>
    <string name="manual">Manual</string>
    <string name="adaptive">Adaptive</string>
    <string name="high_noise">High Noise</string>
    <string name="medium_noise">Medium Noise</string>
    <string name="low_noise">Low Noise</string>
    <string name="weak">Weak</string>
    <string name="moderate">Moderate</string>
    <string name="strong">Strong</string>
    <string name="sound_modes">Sound Modes</string>
    <string name="game_mode">Game Mode</string>
    <string name="pair_device_unfiltered">Pair Device (Unfiltered)</string>
    <string name="paired">Paired</string>
    <string name="not_paired">Not Paired</string>
    <string name="mac_address_filter">Mac Address Filter</string>
    <string name="no_devices_found">No Devices Found</string>
    <string name="bluetooth_is_disabled">Bluetooth is Disabled</string>
    <string name="copy_logs_to_clipboard">Copy Logs to Clipboard</string>
    <string name="unknown">Unknown</string>
    <string name="add_item">Add Item</string>
    <string name="demo">Demo</string>
    <string name="select_device_model">Select Device Model</string>
    <string name="select_x">Select %s</string>
    <string name="demo_mode">Demo Mode</string>
    <string name="activate">Activate</string>
    <string name="edit">Edit</string>
    <string name="no_quick_presets">No Quick Presets</string>
    <string name="active">Active</string>
    <string name="create_quick_preset">Create Quick Preset</string>
</resources>
